@@ -4885,3 +4885,5 @@
 20150603 slt.c: remove redundant declaration of buffer (Fred).
 20150607 pokefinder/pokemem.c: recognise that libspectrum memory alloation never
          fails (Fred).
+20150607 pokefinder/pokemem.c: change functions that cannot fail to return type
+         void and make local functions static (Fred).
